	Fixed bug where the hide function would throw an error about a missing variable.
	Fixed bug where autolink wouldn't convert URLs when hitting enter on IE due to the new enter key logic.
	Fixed bug where formatting using shortcuts like ctrl+b wouldn't work properly the first time.
	Fixed bug where selection.setContent after a formatter call wouldn't generate formatted contents.
Version 3.5b3 (2012-03-29)
	Added cancel button to colour picker dialog.
	Added figure and figcaption to the html5 visualblocks plugin.
	Added default alignment options for the figure element.
	Fixed bug where empty inline elements within block elements would sometimes produce a br child element.
	Fixed bug where urls pointing to the same domain as the current one would cause undefined errors. Patch contributed by Paul Giberson.
	Fixed bug where enter inside an editable element inside an non editable element would split the element.
	Fixed bug where cut/copy/paste of noneditable elements didn't work.
	Fixed bug where backspace would sometimes produce font elements on WebKit.
	Fixed bug where WebKit would produce spans out of various inline elements when using backspace.
	Fixed bug where IE9 wouldn't properly update image styles when images where resized.
	Fixed bug where drag/drop of noneditable elements didn't work correctly.
	Fixed bug where applying formatting to all contents wouldn't work correctly when an end point was inside an empty bock. Patch contributed by Jose Luiz.
	Fixed bug where IE10 removed the scopeName from the DOM element interface and there for it produced an undefined string in element path.
	Fixed bug where the caret would be placed at an incorrect location if you applied block formatting while having the caret at the end of the block.
	Fixed bug where applying column changes using the cell dialog would only update the first column. Patch contributed by krzyko.
	Fixed bug where the visualblocks plugin would force editor focus if it was turned on by default.